--- a/marvel-heroes/src/components/CardTeam/CardTeam.scss
+++ b/marvel-heroes/src/components/CardTeam/CardTeam.scss
@@ -3,6 +3,7 @@
     border: 3px solid black;
     margin: 12px;
     background-color: white;
+    justify-content: space-between;
 
     >div{
         display: flex;
