--- a/marvel-heroes/src/components/Header/Header.scss
+++ b/marvel-heroes/src/components/Header/Header.scss
@@ -1,4 +1,14 @@
 .header{
-    background-color: aquamarine;
+    background-color: black;
     text-align: center;
+    position: relative;
+    color: red;
+    
+    >button {
+        color: red($color: #000000);
+        background-color: blue($color: #000000);
+        position: absolute;
+        right: 10px;
+        font-size: 32px;
+    }
 }
