--- a/marvel-heroes/src/components/CardSearch/CardSearch.scss
+++ b/marvel-heroes/src/components/CardSearch/CardSearch.scss
@@ -6,8 +6,12 @@
     justify-content: space-between;
     align-items: center;
     margin: 10px;
-    background-color: rgba(206, 34, 34, 0.76);
+    background-color: rgba(206, 34, 34);
     height: 100%;
+
+    >.name{
+        text-align: center;
+    }
     
     >span{
         // padding-top: 5px;
@@ -25,5 +29,12 @@
             background-color: cadetblue;
         }
     }
+    .btnLeft{
+        border-radius: 0 15px
+    }
+    .btnRight{
+        border-radius: 15px 0
+    }
+
 
 }
