--- a/marvel-heroes/src/components/CardTeam/CardTeam.scss
+++ b/marvel-heroes/src/components/CardTeam/CardTeam.scss
@@ -1,25 +1,66 @@
-.myTeam>#cardTeam{
-    display: flex !important;
-    border: 3px solid black;
-    margin-bottom: 12px;
-    background-color: white;
-    justify-content: space-between;
-    background-color: aquamarine;
+#cardTeam {
+  display: flex !important;
+  border: 3px solid black;
+//   margin-bottom: 12px;
+  background-color: white;
+  justify-content: space-between;
+  background-color: rgba(206, 34, 34);
+  border-radius: 10px;
+  position: relative;
 
-    >div{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  @media screen and (max-width: 991px) {
+    flex-direction: column;
+  }
+  @media screen and (max-width: 575px) {
+    div,
+    img {
+      width: -webkit-fill-available;
     }
+  }
+  > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  > .someHero {
+    // background-color: red;
+    width: -webkit-fill-available;
+    > .name {
+      text-align: center;
+      @media screen and (max-width: 991px) {
+        font-size: 16px;
+      }
+      @media screen and (max-width: 575px) {
+        display: none;
+      }
+    }
+  }
+  > button {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    @media screen and (max-width: 575px) {
+      width: 20px;
+      height: 20px;
+    }
+    > svg {
+      background-color: rgba(206, 34, 34);
+      border-radius: 50%;
+    }
+  }
 }
 
-.imgCardTeam{
-    border-right: 3px solid black;
-    margin-right: 20px;
-    padding: 5px;
-    
-}
-
-img{
+.imgCardTeam {
+  // border-right: 3px solid black;
+  // margin-right: 20px;
+  padding: 5px;
+  img {
     width: 100px;
+  }
 }
+
