--- a/marvel-heroes/src/components/Header/Header.scss
+++ b/marvel-heroes/src/components/Header/Header.scss
@@ -2,8 +2,13 @@
     background-color: black;
     text-align: center;
     position: relative;
-    color: red;
+    color: rgba(206, 34, 34);
+    margin-bottom: 10px;
     
+    // font-size: 20px;
+    @media screen and (max-width: 575px) {
+       font-size: 22px;
+      }
     >button {
         color: red($color: #000000);
         background-color: blue($color: #000000);
