--- a/marvel-heroes/src/components/CardSearch/CardSearch.scss
+++ b/marvel-heroes/src/components/CardSearch/CardSearch.scss
@@ -20,12 +20,14 @@
         width: 80%;
     }
     >div{
-        // padding: 10px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
         button{
             margin: 5px 5px 10px 5px;
             border-radius: 20px;
             // padding: 5px;
-            width: 50px;
+            width: 35%;
             background-color: cadetblue;
         }
     }
