--- a/marvel-heroes/src/components/MyTeam/MyTeam.scss
+++ b/marvel-heroes/src/components/MyTeam/MyTeam.scss
@@ -13,6 +13,7 @@
         margin-top: 55px;
         margin-left: 0;
         padding: 10px 0 0 10px;
+        position: relative;
         @media screen and (max-width: 991px) {
             margin-top: 0px;
         }
@@ -21,6 +22,13 @@
             @media screen and (max-width: 575px) {
                 font-size: 22px;
             }
+        }
+        >svg{
+            position: absolute;
+            top: 8px;
+            right: 0;
+            color: rgba(206, 34, 34);
+            width: 70px;
         }
     }
 }
