--- a/marvel-heroes/src/pages/SingleHeroPage/SingleHeroPage.scss
+++ b/marvel-heroes/src/pages/SingleHeroPage/SingleHeroPage.scss
@@ -12,10 +12,17 @@
       width: 100%;
     }
   }
-  .about{
+  .about {
     margin-top: 50px;
     @media screen and (max-width: 575px) {
-        margin-top: 10px;
+      margin-top: 10px;
+    }
+  }
+  .switchComics {
+    padding: 10px 10px 0px 30px;
+    span {
+      font-size: 20px;
+      font-weight: 600;
     }
   }
 }
